fix(style.scss): del horizontal scroll

--- a/css/style.scss
+++ b/css/style.scss
@@ -47,7 +47,7 @@ ul{
    position: relative;
    &::after{
       content: '';
-      width: 100vw;
+      width: 100%;
       height: 70px;
       left: 0;
       bottom: 0;
